# codescaffold

./: .gitignore  .importlinter  .refactor_plan_team_config.json  CLAUDE.md  PROMPT.md  README.md  RESUME.md  STATUS.md  SWARMRESUME.md  SWARMSTATE.md  headroom_memory.db  pyproject.toml  tool-ux-improvements-spec.md
.claude/: swarm-ship.md
.headroom/: memory.db  memory_graph.db  memory_vectors.db
.ropeproject/: config.py  history  history.json
docs/: ARCHITECTURE.md  CHECKPOINT.md  DECISIONS.md  DESIGN.md  KNOWNTOOLS.md  NEXT_STEP.md
src/codescaffold/: STRUCTURE.md  __init__.py  mcp_import_smoke_tests_v2.ipynb
src/codescaffold/mcp/: server.py  (+1 more)
src/refactor_plan/: __init__.py  cleaner.py  cli.py  cluster_view.py  demo.py  graph_bridge.py  layout.py  mcp_server.py  namer.py  planner.py  reporter.py  server_helpers.py  splitter.py  validator.py
tests/: conftest.py  test_applicator.py  test_applicator_contract.py  test_applicator_rope.py  test_applicator_shims.py  test_candidates.py  test_cleaner.py  test_cli_analyze.py  test_cli_apply.py  test_cli_clean.py  test_cli_dry_run.py  test_cli_name.py  test_cli_rename.py  test_cli_split.py  test_cluster_view.py  test_contracts.py  test_docstringer.py  test_graph_bridge.py  test_graphify.py  test_grimp_dag.py  test_mcp_tools.py  test_module_ops.py  test_namer.py  test_operations.py  test_planner.py  test_planner_bridge.py  test_plans.py  test_preflight.py  test_rename_map.py  test_reporter.py  test_sandbox.py  test_splitter.py  test_validation_audit.py  test_validator.py
tests/old/: test_applicator.py  test_planner.py
(+124 files in other folders)
